🚧 • Spacing fix

--- a/style.css
+++ b/style.css
@@ -182,7 +182,6 @@ header{
   max-height: 19px;
 }
 .icos{
-  margin-top:4px;
   text-align:center;
   display:inline-block;
   width:150px;
